deploy: bd2bbbac47a93bca0cb198e62e96f366475296bc

--- a/refs/heads/master/genindex.html
+++ b/refs/heads/master/genindex.html
@@ -188,10 +188,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api_reference/index.html#molecular_builder.core.carve_geometry">carve_geometry() (in module molecular_builder.core)</a>
 </li>
-      <li><a href="api_reference/index.html#molecular_builder.core.create_bulk_crystal">create_bulk_crystal() (in module molecular_builder.core)</a>
+      <li><a href="api_reference/index.html#molecular_builder.geometry.Geometry.cell2planes">cell2planes() (molecular_builder.geometry.Geometry static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api_reference/index.html#molecular_builder.core.create_bulk_crystal">create_bulk_crystal() (in module molecular_builder.core)</a>
+</li>
       <li><a href="api_reference/index.html#molecular_builder.geometry.CubeGeometry">CubeGeometry (class in molecular_builder.geometry)</a>
 </li>
       <li><a href="api_reference/index.html#molecular_builder.geometry.CylinderGeometry">CylinderGeometry (class in molecular_builder.geometry)</a>
@@ -219,6 +221,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api_reference/index.html#molecular_builder.geometry.EllipticalCylinderGeometry">EllipticalCylinderGeometry (class in molecular_builder.geometry)</a>
+</li>
+      <li><a href="api_reference/index.html#molecular_builder.geometry.Geometry.extract_box_properties">extract_box_properties() (molecular_builder.geometry.Geometry static method)</a>
 </li>
   </ul></td>
 </tr></table>
