--- a/refs/heads/master/genindex.html
+++ b/refs/heads/master/genindex.html
@@ -162,6 +162,7 @@
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -275,6 +276,14 @@
         <li><a href="api_reference/index.html#module-molecular_builder.geometry">module</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api_reference/index.html#molecular_builder.geometry.NotchGeometry">NotchGeometry (class in molecular_builder.geometry)</a>
+</li>
   </ul></td>
 </tr></table>
 
