deploy: c9deda3e1dd5126a9b4cb767aeab24129c955d70

--- a/refs/heads/master/genindex.html
+++ b/refs/heads/master/genindex.html
@@ -233,6 +233,8 @@
 </li>
         <li><a href="api_reference/index.html#molecular_builder.geometry.ProceduralSurfaceGeometry.packmol_structure">(molecular_builder.geometry.ProceduralSurfaceGeometry method)</a>
 </li>
+        <li><a href="api_reference/index.html#molecular_builder.geometry.ProceduralSurfaceGridGeometry.packmol_structure">(molecular_builder.geometry.ProceduralSurfaceGridGeometry method)</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -241,6 +243,8 @@
       <li><a href="api_reference/index.html#molecular_builder.geometry.PlaneGeometry">PlaneGeometry (class in molecular_builder.geometry)</a>
 </li>
       <li><a href="api_reference/index.html#molecular_builder.geometry.ProceduralSurfaceGeometry">ProceduralSurfaceGeometry (class in molecular_builder.geometry)</a>
+</li>
+      <li><a href="api_reference/index.html#molecular_builder.geometry.ProceduralSurfaceGridGeometry">ProceduralSurfaceGridGeometry (class in molecular_builder.geometry)</a>
 </li>
   </ul></td>
 </tr></table>
